--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:onboarding-cmo": "node dist/onboarding-cmo/server/server.mjs"
+    "serve:ssr:onboarding-cmo": "node dist/onboarding-cmo/server/server.mjs",
+    "production": "ng build --base-href /onboarding-cmo/ --configuration production"
   },
   "private": true,
   "dependencies": {
