--- a/angular.json
+++ b/angular.json
@@ -113,6 +113,26 @@
 									"type": "anyComponentStyle"
 								}
 							]
+						},
+            "development-server": {
+							"outputPath": "dist/development-server",
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.development-server.ts"
+								}
+							],
+							"optimization": false,
+							"outputHashing": "all",
+							"sourceMap": true,
+							"namedChunks": false,
+							"aot": false,
+							"extractLicenses": true,
+							"budgets": [
+								{
+									"type": "anyComponentStyle"
+								}
+							]
 						}
           },
           "defaultConfiguration": "production"
